[package]
name = "mzdb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mzdb"
path = "src/main.rs"

[[bin]]
name = "mzdb_client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
clap = { version = "4.3", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.9"

